feat: implement login logout and register
