# backend/api/openapi.yml
@@ -22,13 +22,15 @@ paths:
               properties:
                 email:
                   type: string
-                  format: email
                 password:
                   type: string
-                  minLength: 8
       responses:
-        "201":
-          description: User registered
+        "204":
+          description: Logged in
+          headers:
+            Set-Cookie:
+              schema:
+                type: string
         "409":
           description: Email already exists
   /auth/login:
@@ -59,6 +61,10 @@ paths:
       responses:
         "204":
           description: Logged out
+          headers:
+            Set-Cookie:
+              schema:
+                type: string
   /expenses:
     get:
       summary: List expenses for a date
